# PDF-FixLab

./: Dockerfile  README.md  cli.py  docker-compose.yaml  pyproject.toml
source/: __init__.py  deskew.py  merge.py  ocr_layer.py  rotate.py
web/: Dockerfile.web  web_app.py
web/uiux/static/: script.js  style.css
web/uiux/templates/: index.html
worker/: Dockerfile.worker  worker_app.py
worker/source/: __init__.py  deskew.py  merge.py  resize.py  rotate.py
